<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".EditOperation">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/edit_operation"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/txtNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lblValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/txtValueEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_marginBottom="3dp"
            android:textSize="14dp" />

        <Spinner
            android:id="@+id/cmbTypeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/is_paid_radios_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_paid"
            android:textSize="14dp" />

        <RadioGroup
            android:id="@+id/is_paid_radios_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/paid_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="55dp"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/paid_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="edit"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clear"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/operation_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="1dp"
        android:lineSpacingMultiplier="1.2"
        android:textAlignment="center"
        android:textSize="16dp" />

</LinearLayout>